# big-tree-collection-simulator

./: .gitignore  BSDLicense.txt  Issues.txt  README.markdown  bootstrap.sh  configure.ac
src/: Makefile.am  big-tree-coll-sim.cpp  big_tree_sim.cpp  clean_tree.cpp  indent_newick.cpp  newick_to_nexus.cpp  tree_template.cpp  tree_template.hpp
test/: Makefile.am  accepted_internal.newick  accepted_internal2.newick  accepted_internal3.newick  bad.tre  basic-commands.txt  example_repeat_cmds.txt  poly.tre  rejected_internal.newick  simple.tre  small_complex.tre  test_traversal.cpp
