AM_CPPFLAGS = @CPPFLAGS@
AM_LDFLAGS  = @LDFLAGS@

bin_PROGRAMS = big-tree-collection-simulator clean-tree indent-newick big-tree-sim

big_tree_collection_simulator_SOURCES = \
	big-tree-coll-sim.cpp 

clean_tree_SOURCES = clean_tree.cpp

indent_newick_SOURCES = indent_newick.cpp


big_tree_sim_CXXFLAGS = -W -Wall -Wextra -pedantic -std=c++11

big_tree_sim_SOURCES = big_tree_sim.cpp
