AM_CPPFLAGS = @CPPFLAGS@
AM_LDFLAGS  = @LDFLAGS@

bin_PROGRAMS = big-tree-sim

big_tree_sim_CXXFLAGS = -W -Wall -Wextra -pedantic -std=c++11

big_tree_sim_SOURCES = big_tree_sim.cpp \
	tree_template.cpp

noinst_HEADERS = tree_template.hpp

#clean_tree_SOURCES = clean_tree.cpp

#indent_newick_SOURCES = indent_newick.cpp
