AM_CPPFLAGS = @CPPFLAGS@
AM_LDFLAGS  = @LDFLAGS@

bin_PROGRAMS = big-tree-sim-@VERSION@

big_tree_sim_@VERSION@_CXXFLAGS = -W -Wall -Wextra -pedantic -std=c++11

big_tree_sim_@VERSION@_SOURCES = big_tree_sim.cpp \
	tree_template.cpp

noinst_HEADERS = tree_template.hpp

#clean_tree_SOURCES = clean_tree.cpp

#indent_newick_SOURCES = indent_newick.cpp
